# FAST-CALIB-MULTI-ROS2-custom

./: .gitignore  CMakeLists.txt  README.md  charuco_calibration_cmd.txt  package.xml  pos.txt
config/: qr_params.yaml
include/: common_lib.h
launch/: calib.launch.py  live_calib.launch.py  multi_calib.launch.py
rviz_cfg/: fast_livo2.rviz
src/: data_preprocess.hpp  lidar_detect.hpp  live_calib.cpp  main.cpp  multi_scene.cpp  qr_detect.hpp
